fix contact me alignment

--- a/style.css
+++ b/style.css
@@ -274,11 +274,15 @@ h1{
     display:flex;
     flex-direction: row;
     justify-content: flex-start;
-    align-items: flex-start;
+    align-items: center;
     flex-wrap:  wrap;
     gap:70px;
 }
-
+@media only screen and (max-width: 600) {
+    #contactmediv{
+        align-items: flex-start;
+    }
+}
 
 .contact-email a{
     display:flex;
